# lamadist

./: .gitignore  .kas.env  .mise.toml  Makefile  Pipfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
container/: Dockerfile  Dockerfile.alma  packages.alma.txt  packages.txt  pyproject.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GITHUB_ACTIONS_RUNNER.md  PARTITIONING.md  PLAN.md  TOOLING.md
kas/: installer.kas.yml  main.kas.yml
kas/bsp/: orin-nx.kas.yml  rk1.kas.yml  soquartz.kas.yml  x86_64.kas.yml
kas/extras/: aws.yml  containers.yml  debug.kas.yml  demo.kas.yml
kas/scanners/: security.kas.yml
meta-lamadist/conf/: layer.conf
meta-lamadist/conf/distro/: lamadist.conf
meta-lamadist/conf/machine/: intel.conf
meta-lamadist/recipes-core/images/: lama-image-base.bb  lama-image-common.inc
meta-lamadist/recipes-core/packagegroups/: packagegroup-lamadist-base.bb
meta-lamadist/wic/: installer-image.wks  machine-image.wks
